[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.10.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }